# martech-ai-workflow

./: .gitignore  .markdownlint.yaml  LICENSE  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml
docs/: 00-executive-brief.md  01-current-state-process-map.md  02-bottleneck-register.md  03-data-landscape.md  04-target-architecture.md  05-data-pipelines.md  06-interface-spec.md  07-nfr-budgets.md  08-vendor-evaluation.md  09-platform-roadmap-ask.md  10-governance.md
docs/adr/: 0001-legal-compliance-as-explicit-swimlane.md  0002-no-automated-claims-signoff.md  0003-no-automated-brand-review-calibration.md  0004-no-ai-for-legal-review-capacity.md  0005-scope-exactly-three-ai-use-cases.md  0006-exclude-pii-sources-from-retrieval-index.md  0007-reject-cdc-for-pim-feed.md  0008-hybrid-ingestion-for-ticketing-source.md  (+5 more)
reference-slice/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
reference-slice/bench/: latency_harness.py
reference-slice/corpus/brand_guidelines/: prohibited_claims.md  voice_and_tone.md
reference-slice/corpus/claims_specs/: glow-serum-x1.md  hydra-boost-cream.md
reference-slice/corpus/market_claims_taxonomy/: eu.md  us.md
reference-slice/src/mawo/: gateway.py  schemas.py  store.py  trace.py
reference-slice/src/mawo/policy/: claims.py  engine.py
reference-slice/src/mawo/providers/: __init__.py  anthropic_provider.py  base.py  mock.py
reference-slice/src/mawo/retrieval/: embeddings.py  index.py
reference-slice/tests/: test_gateway.py  test_policy.py  test_retrieval.py
specs/: agent-gateway.openapi.yaml
(+2 files in other folders)
